# shader_processor

./: CMakeLists.txt  README.md
examples/: main.frag.glsl  main.json  main.vert.glsl
include/shaders/: compile.hpp  glslang_resource.hpp  shader_binary.hpp  shader_constants.hpp  shader_json.hpp
src/: CMakeLists.txt  compile_glsl.cpp  compile_msl.mm  compile_slang.cpp  compile_spirv_cross.cpp  shader_binary.cpp  shader_json.cpp  shader_processor.cpp
